--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "_markdownlint": "npx --quiet markdownlint-cli --config ./markdownlint/config.json",
-    "test": "npx --quiet npm-run-all lint:*",
+    "test": "npx --quiet npm-run-all -p lint:*",
     "lint:shell": "shellcheck --exclude=SC1090,SC2148 --shell=sh -- shell/*.sh",
     "lint:editorconfig": "npx --quiet echint",
     "lint:readme": "npm run --silent _markdownlint -- ./README.md",
