--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "test": "tests"
   },
   "scripts": {
+    "_header": "npx --quiet boxen-cli --padding 1",
     "_markdownlint": "npx --quiet markdownlint-cli --config ./markdownlint/config.json",
     "_parallel": "npx --quiet npm-run-all --silent --aggregate-output --parallel",
-    "test": "npm run --silent _parallel -- lint:*",
-    "lint:shell": "shellcheck --exclude=SC1090,SC2148 --shell=sh -- shell/*.sh",
-    "lint:editorconfig": "npx --quiet echint",
-    "lint:readme": "npm run --silent _markdownlint -- ./README.md",
-    "lint:readme:vim": "npm run --silent _markdownlint -- ./vim/README.md"
+    "lint:editorconfig": "npm run --silent _header -- \"$npm_lifecycle_event\"    && npx --quiet echint",
+    "lint:readme": "npm run --silent _header -- \"$npm_lifecycle_event\"          && npm run --silent _markdownlint -- ./README.md",
+    "lint:readme:vim": "npm run --silent _header -- \"$npm_lifecycle_event\"      && npm run --silent _markdownlint -- ./vim/README.md",
+    "lint:shell": "npm run --silent _header -- \"$npm_lifecycle_event\"           && shellcheck --exclude=SC1090,SC2148 --shell=sh -- shell/*.sh",
+    "test": "npm run --silent _parallel -- lint:**"
   },
   "repository": {
     "type": "git",
