--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dotfiles",
+  "private": true,
   "version": "0.0.1",
   "description": "@davidosomething/dotfiles",
   "main": "index.js",
