--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
-language: node_js
-node_js:
-  - "8"
+language: python
+os:
+  - linux
+  - osx
+python:
+  - "3.6"
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y shellcheck
+  - nvm install --lts
+  - nvm use --lts
+script:
+  - npm test
