use glob-cli2 instead

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:readme": "npm run --silent _header -- \"$npm_lifecycle_event\"          && npm run --silent _markdownlint -- ./README.md",
     "lint:readme:vim": "npm run --silent _header -- \"$npm_lifecycle_event\"      && npm run --silent _markdownlint -- ./vim/README.md",
     "lint:shell": "npm run --silent _header -- \"$npm_lifecycle_event\"           && shellcheck --exclude=SC1090,SC2148 --shell=sh -- shell/*.sh",
-    "lint:vim": "npm run --silent _header -- \"$npm_lifecycle_event\"             && npx --ignore-existing --quiet globstar -- vint --stat --enable-neovim \"vim/{after,autoload/dko*,colors,ftplugin,gvimrc,mine,plugin,vimrc,*.vim}\"",
+    "lint:vim": "npm run --silent _header -- \"$npm_lifecycle_event\"             && vint $(npx --ignore-existing --quiet glob-cli2 \"vim/{after,autoload/dko*,colors,ftplugin,gvimrc,mine,plugin,vimrc,*.vim}\")",
     "test": "npm run --silent _parallel -- lint:**"
   },
   "repository": {
