--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "test": "tests"
   },
   "scripts": {
-    "_header": "npx --ignore-existing --quiet boxen-cli --padding 1",
+    "_header": "npx --ignore-existing --quiet boxen-cli --padding 0",
     "_markdownlint": "npx --ignore-existing --quiet markdownlint-cli --config ./markdownlint/config.json",
     "_parallel": "npx --ignore-existing --quiet npm-run-all --silent --aggregate-output --parallel",
-    "lint:editorconfig": "npm run --silent _header -- \"$npm_lifecycle_event\"    && npx --ignore-existing --quiet echint && echo ' ✓ passed'",
-    "lint:readme": "npm run --silent _header -- \"$npm_lifecycle_event\"          && npm run --silent _markdownlint -- ./README.md && echo ' ✓ passed'",
-    "lint:readme:vim": "npm run --silent _header -- \"$npm_lifecycle_event\"      && npm run --silent _markdownlint -- ./vim/README.md && echo ' ✓ passed'",
-    "lint:shell": "npm run --silent _header -- \"$npm_lifecycle_event\"           && shellcheck --exclude=SC1090,SC2148 --shell=sh -- shell/*.sh && echo ' ✓ passed'",
-    "lint:vim": "npm run --silent _header -- \"$npm_lifecycle_event\"             && vint $(npx --ignore-existing --quiet glob-cli2 \"vim/{after,autoload/dko*,colors,ftplugin,gvimrc,mine,plugin,vimrc,*.vim}\") && echo ' ✓ passed'",
-    "test": "npm run --silent _parallel -- lint:**"
+    "lint": "npm run --silent _parallel -- lint:**",
+    "lint:editorconfig": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"  && npx --ignore-existing --quiet echint && echo ' ✓ passed\n'",
+    "lint:readme": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"        && npm run --silent _markdownlint -- ./README.md && echo ' ✓ passed\n'",
+    "lint:readme:vim": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"    && npm run --silent _markdownlint -- ./vim/README.md && echo ' ✓ passed\n'",
+    "lint:shell": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"         && shellcheck --exclude=SC1090,SC2148 --shell=sh -- shell/*.sh && echo ' ✓ passed\n'",
+    "lint:vim": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"           && vint -- $(npx --ignore-existing --quiet glob-cli2 \"vim/{after,autoload/dko*,colors,ftplugin,gvimrc,mine,plugin,vimrc,*.vim}\") && echo ' ✓ passed\n'",
+    "pretest": "npm run --silent lint",
+    "test": "echo ' DONE '"
   },
   "repository": {
     "type": "git",
