reduce pj output; versions is a bash script

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,7 +26,7 @@ set-option        -g  @tpm_plugins '  \
 #set-option          -g  utf8
 #set-window-option   -g  utf8                on
 
-# $TERM -- removed, handled by versions.sh (bottom)
+# $TERM -- removed, handled by versions.bash (bottom)
 #set-option -g default-terminal "tmux-256color"
 
 # for vim, focus pane on event like filemodified alerts
@@ -172,7 +172,7 @@ bind    L     resize-pane -R 4
 # tmux version specific
 # ============================================================================
 
-run-shell "${DOTFILES}/tmux/versions.sh"
+run-shell "${DOTFILES}/tmux/versions.bash"
 
 # ============================================================================
 # tpm init -- keep at bottom
