--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:readme": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"        && npm run --silent _markdownlint -- ./README.md && echo ' ✓ passed\n'",
     "lint:readme:vim": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"    && npm run --silent _markdownlint -- ./vim/README.md && echo ' ✓ passed\n'",
     "lint:shell": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"         && shellcheck --exclude=SC1090,SC2148 --shell=sh -- shell/*.sh && echo ' ✓ passed\n'",
-    "lint:bash": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"          && shellcheck --shell=bash -- bash/* && echo ' ✓ passed\n'",
+    "lint:bash": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"          && shellcheck --shell=bash -- $(npx --ignore-existing --quiet glob-cli2 \"{bash/*,**/*.bash}\") && echo ' ✓ passed\n'",
     "lint:vim": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"           && vint -- $(npx --ignore-existing --quiet glob-cli2 \"vim/{after,autoload/dko*,colors,ftplugin,gvimrc,mine,plugin,vimrc,*.vim}\") && echo ' ✓ passed\n'",
     "pretest": "npm run --silent lint",
     "test": "echo ' DONE '"
