--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y shellcheck
+  - nvm install --lts
 script:
   - tox
-  - nvm install --lts
-  - npm test --silent
+  - npm test
