--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:editorconfig": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"                && npx --ignore-existing --quiet echint && echo ' ✓ passed\n'",
     "lint:bash:bashate": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"                && bashate --ignore=E003,E005,E006 -- $(npx --ignore-existing --quiet glob-cli2 \"{bash/*,**/*.bash}\") && echo ' ✓ passed\n'",
     "lint:bash:shellcheck": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"             && shellcheck --exclude=SC1090 --shell=bash -- $(npx --ignore-existing --quiet glob-cli2 \"{bash/*,**/*.bash}\") && echo ' ✓ passed\n'",
-    "lint:python": "[ -z \"$CI\" ] && { npm run --silent _header -- \"  ${npm_lifecycle_event}  \"  && flake8 -- $(npx --ignore-existing --quiet glob-cli2 \"bitbar/mine/*.py\") && echo ' ✓ passed\n'; }",
+    "lint:python": "if [ -z \"$CI\" ]; then npm run --silent _header -- \"  ${npm_lifecycle_event}  \"  && flake8 -- $(npx --ignore-existing --quiet glob-cli2 \"bitbar/mine/*.py\") && echo ' ✓ passed\n'; fi",
     "lint:readmes": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"                     && npm run --silent _markdownlint -- $(npx --ignore-existing --quiet glob-cli2 \"{.,*,vim/mine/*}/README.md\") && echo ' ✓ passed\n'",
     "lint:shell:shellcheck": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"            && shellcheck --exclude=SC1090,SC2148 --shell=sh -- $(npx --ignore-existing --quiet glob-cli2 \"{shell,bitbar/mine}/*.sh\") && echo ' ✓ passed\n'",
     "lint:vim:after": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"     && vint -- vim/after          && echo ' ✓ passed\n'",
