prefer tox.ini, ini is 4space

--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,9 @@ end_of_line = LF
 indent_size = 2
 indent_style = space
 
+[*.ini]
+indent_size = 4
+
 [.gitconfig]
 indent_size = 2
 indent_style = tab
