--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,14 @@
 envlist = py27
 skipsdist = True
 
+[flake8]
+ignore =
+    # This repo contains mostly shellscripts so the first comment is a shebang
+    # Don't need the whitespace
+    D205,
+    # First line is probably a shebang, so should not end with period
+    D400
+
 [testenv]
 commands = flake8 bitbar/mine/*.py
 deps =
