--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint:vim:rc": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"        && vint -- $(npx --ignore-existing --quiet glob-cli2 \"vim/{gvimrc,vimrc,*.vim}\") && echo ' ✓ passed\n'",
     "lint:vim:mine": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"      && vint -- vim/mine   && echo ' ✓ passed\n'",
     "lint:vim:plugin": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"    && vint -- vim/plugin && echo ' ✓ passed\n'",
+    "lint:yaml": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"          && yamllint -- . && echo ' ✓ passed\n'",
     "pretest": "npm run --silent lint",
     "test": "echo ' DONE '"
   },
