--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
   - '2.7'
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y shellcheck
+  - sudo apt-get install -qq -y shellcheck
   - nvm install --lts
 script:
   - tox
