--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,13 @@ envlist = py27
 skipsdist = True
 
 [flake8]
+# D205
+# This repo contains mostly shell scripts so the first comment is likely
+# a shebang. Don't need the whitespace
+# D400
+# First line is probably a shebang, so should not end with period
 ignore =
-    # This repo contains mostly shellscripts so the first comment is a shebang
-    # Don't need the whitespace
     D205,
-    # First line is probably a shebang, so should not end with period
     D400
 
 [testenv]
