--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -37,7 +37,7 @@ adjust_line_height 0
 foreground       #dddddd
 
 # The background color
-background       #111111
+background       #1a1a1a
 
 # The foreground for selections
 selection_foreground #000000
