eslint is a devDep now so npx can run using local ver

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
       "xresources/**"
     ]
   },
-  "peerDependencies": {
+  "devDependencies": {
     "eslint": "^4.10.0",
     "eslint-config-davidosomething": "^2.0.0"
   }
