run safety checks on requirements.txt

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27
+envlist = py27, safety
 skipsdist = True
 
 [flake8]
@@ -21,3 +21,9 @@ deps =
     flake8-docstrings
     flake8-import-order
     flake8-quotes
+
+[testenv:safety]
+passenv = CI
+commands = safety check -r requirements.txt
+deps =
+    safety
