redshift settings for mac

--- a/mac/redshift.conf
+++ b/mac/redshift.conf
@@ -34,7 +34,7 @@ location-provider=manual
 ; 'randr' is the preferred method, 'vidmode' is an older API.
 ; but works in some cases when 'randr' does not.
 ; The adjustment method settings are in a different section.
-adjustment-method=randr
+adjustment-method=quartz
 
 ; Configuration of the location-provider:
 ; type 'redshift -l PROVIDER:help' to see the settings.
@@ -53,4 +53,4 @@ lon=11.6
 ; second screen. If this option is not specified, Redshift will try
 ; to adjust _all_ screens.
 [randr]
-screen=1
+screen=0
