switch to security only

--- a/.pyup.yml
+++ b/.pyup.yml
@@ -1,7 +1,9 @@
 ---
+update: insecure
 branch: dev
 schedule: "every day"
 search: true
+label_prs: bot
 assignees:
   - davidosomething
 close_prs: true
