--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -85,6 +85,7 @@ adjust_line_height  4
 #: Scrollback {{{
 
 # scrollback_lines 2000
+scrollback_lines 10000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand.
@@ -194,6 +195,7 @@ adjust_line_height  4
 #: Terminal bell {{{
 
 # enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
@@ -465,6 +467,7 @@ color15 #a7a7a7
 #: not see it.
 
 # close_on_child_death no
+close_on_child_death yes
 
 #: Close the window when the child process (shell) exits. If no (the
 #: default), the terminal will remain open when the child exits as
@@ -548,6 +551,7 @@ color15 #a7a7a7
 #: Hide the kitty window from running tasks (Option+Tab) on macOS.
 
 # macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
@@ -729,6 +733,10 @@ color15 #a7a7a7
 # map kitty_mod+equal     change_font_size all +2.0
 # map kitty_mod+minus     change_font_size all -2.0
 # map kitty_mod+backspace change_font_size all 0
+
+map cmd+equal     change_font_size all +1.0
+map cmd+minus     change_font_size all -1.0
+map cmd+0         change_font_size all 0
 
 #: To setup shortcuts for specific font sizes::
 
