--- a/mac/redshift.conf
+++ b/mac/redshift.conf
@@ -15,14 +15,17 @@ transition=1
 ; since version 1.8.
 ;brightness-day=0.7
 ;brightness-night=0.9
+brightness-day=1.0
+brightness-night=0.8
 ; Set the screen gamma (for all colors, or each color channel
 ; individually)
-gamma=0.8
+;gamma=0.8
 ;gamma=0.8:0.7:0.8
 ; This can also be set individually for day and night since
 ; version 1.10.
 ;gamma-day=0.8:0.7:0.8
-;gamma-night=0.6
+;gamma-day=0.8
+;gamma-night=0.7
 
 ; Set the location-provider: 'geoclue', 'geoclue2', 'manual'
 ; type 'redshift -l list' to see possible values.
