--- a/mac/redshift.conf
+++ b/mac/redshift.conf
@@ -2,7 +2,7 @@
 [redshift]
 ; Set the day and night screen temperatures
 temp-day=5700
-temp-night=4500
+temp-night=4000
 
 ; Enable/Disable a smooth transition between day and night
 ; 0 will cause a direct change from day to night screen temperature.
@@ -16,7 +16,7 @@ transition=1
 ;brightness-day=0.7
 ;brightness-night=0.9
 brightness-day=1.0
-brightness-night=0.8
+brightness-night=0.9
 ; Set the screen gamma (for all colors, or each color channel
 ; individually)
 ;gamma=0.8
@@ -25,7 +25,7 @@ brightness-night=0.8
 ; version 1.10.
 ;gamma-day=0.8:0.7:0.8
 ;gamma-day=0.8
-;gamma-night=0.7
+gamma-night=0.8
 
 ; Set the location-provider: 'geoclue', 'geoclue2', 'manual'
 ; type 'redshift -l list' to see possible values.
