--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,8 +1,10 @@
 {
-  "coc.source.tag.enable": false,
+  "coc.preferences.codeLens.enable": true,
+  "coc.preferences.diagnostic.locationlist": false,
   "coc.preferences.echodocSupport": true,
   //"coc.preferences.diagnostic.displayByAle": true,
   // When true, destroys loclist on insert (and kills neomake results)
-  "coc.preferences.diagnostic.locationlist": false,
-  "coc.preferences.codeLens.enable": true
+  "coc.preferences.minTriggerInputLength": 2,
+  "coc.preferences.snippetIndicator": "⭐︎"
+  "coc.source.tag.enable": false,
 }
