--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -271,6 +271,7 @@ enable_audio_bell no
 #: window_margin_width to be used instead.
 
 # window_padding_width 0.0
+window_padding_width 8.0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border)
@@ -516,6 +517,7 @@ close_on_child_death yes
 #: OS specific tweaks {{{
 
 # macos_titlebar_color system
+macos_titlebar_color background
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, a value of
