--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -10,5 +10,11 @@
   // When true, destroys loclist on insert (and kills neomake results)
   "coc.preferences.minTriggerInputLength": 2,
   "coc.preferences.snippetIndicator": " ⭐︎",
-  "coc.source.tag.enable": false
+  "coc.source.tag.enable": false,
+  "languageserver": {
+    "lua": {
+      "command": "lua-lsp",
+      "filetypes": ["lua"]
+    }
+  }
 }
