--- a/package.json
+++ b/package.json
@@ -12,23 +12,22 @@
     "test": "tests"
   },
   "scripts": {
-    "_header": ". ./lib/pretty.bash && __dko_header",
     "_markdownlint": "npx --ignore-existing --quiet markdownlint-cli --config ./markdownlint/dot.markdownlintrc",
     "_parallel": "npx --ignore-existing --quiet npm-run-all --silent --aggregate-output --continue-on-error --parallel",
     "lint": "npm run --silent _parallel -- lint:**",
-    "lint:editorconfig": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"                && npx --ignore-existing --quiet echint && echo ' ✓ passed\n'",
-    "lint:bash:bashate": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"                && bashate --ignore=E003,E005,E006 -- $(npx --ignore-existing --quiet glob-cli2 \"{bash/*,**/*.bash}\") && echo ' ✓ passed\n'",
-    "lint:bash:shellcheck": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"             && shellcheck --exclude=SC1090 --shell=bash -- $(npx --ignore-existing --quiet glob-cli2 \"{bash/*,**/*.bash}\") && echo ' ✓ passed\n'",
-    "lint:python": "if [ -z \"$CI\" ]; then npm run --silent _header -- \"  ${npm_lifecycle_event}  \"  && flake8 -- $(npx --ignore-existing --quiet glob-cli2 \"bitbar/mine/*.py\") && echo ' ✓ passed\n'; fi",
-    "lint:readmes": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"                     && npm run --silent _markdownlint -- $(npx --ignore-existing --quiet glob-cli2 \"{.,*,vim/mine/*}/README.md\") && echo ' ✓ passed\n'",
-    "lint:shell:shellcheck": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"            && shellcheck --exclude=SC1090,SC2148 --shell=sh -- $(npx --ignore-existing --quiet glob-cli2 \"{shell,bitbar/mine}/*.sh\") && echo ' ✓ passed\n'",
-    "lint:vim:after": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"     && vint -- vim/after          && echo ' ✓ passed\n'",
-    "lint:vim:autoload": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"  && vint -- vim/autoload/dko*  && echo ' ✓ passed\n'",
-    "lint:vim:ftplugin": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"  && vint -- vim/ftplugin       && echo ' ✓ passed\n'",
-    "lint:vim:rc": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"        && vint -- $(npx --ignore-existing --quiet glob-cli2 \"vim/{gvimrc,vimrc,*.vim}\") && echo ' ✓ passed\n'",
-    "lint:vim:mine": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"      && vint -- vim/mine   && echo ' ✓ passed\n'",
-    "lint:vim:plugin": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"    && vint -- vim/plugin && echo ' ✓ passed\n'",
-    "lint:yaml": "npm run --silent _header -- \"  ${npm_lifecycle_event}  \"          && yamllint -- . && echo ' ✓ passed\n'",
+    "lint:editorconfig": "./bin/dko-header \"  ${npm_lifecycle_event}  \"                && npx --ignore-existing --quiet echint && echo ' ✓ passed\n'",
+    "lint:bash:bashate": "./bin/dko-header \"  ${npm_lifecycle_event}  \"                && bashate --ignore=E003,E005,E006 -- $(npx --ignore-existing --quiet glob-cli2 \"{bash/*,**/*.bash}\") && echo ' ✓ passed\n'",
+    "lint:bash:shellcheck": "./bin/dko-header \"  ${npm_lifecycle_event}  \"             && shellcheck --exclude=SC1090 --shell=bash -- $(npx --ignore-existing --quiet glob-cli2 \"{bash/*,**/*.bash}\") && echo ' ✓ passed\n'",
+    "lint:python": "if [ -z \"$CI\" ]; then ./bin/dko-header \"  ${npm_lifecycle_event}  \"  && flake8 -- $(npx --ignore-existing --quiet glob-cli2 \"bitbar/mine/*.py\") && echo ' ✓ passed\n'; fi",
+    "lint:readmes": "./bin/dko-header \"  ${npm_lifecycle_event}  \"                     && npm run --silent _markdownlint -- $(npx --ignore-existing --quiet glob-cli2 \"{.,*,vim/mine/*}/README.md\") && echo ' ✓ passed\n'",
+    "lint:shell:shellcheck": "./bin/dko-header \"  ${npm_lifecycle_event}  \"            && shellcheck --exclude=SC1090,SC2148 --shell=sh -- $(npx --ignore-existing --quiet glob-cli2 \"{shell,bitbar/mine}/*.sh\") && echo ' ✓ passed\n'",
+    "lint:vim:after": "./bin/dko-header \"  ${npm_lifecycle_event}  \"     && vint -- vim/after          && echo ' ✓ passed\n'",
+    "lint:vim:autoload": "./bin/dko-header \"  ${npm_lifecycle_event}  \"  && vint -- vim/autoload/dko*  && echo ' ✓ passed\n'",
+    "lint:vim:ftplugin": "./bin/dko-header \"  ${npm_lifecycle_event}  \"  && vint -- vim/ftplugin       && echo ' ✓ passed\n'",
+    "lint:vim:rc": "./bin/dko-header \"  ${npm_lifecycle_event}  \"        && vint -- $(npx --ignore-existing --quiet glob-cli2 \"vim/{gvimrc,vimrc,*.vim}\") && echo ' ✓ passed\n'",
+    "lint:vim:mine": "./bin/dko-header \"  ${npm_lifecycle_event}  \"      && vint -- vim/mine   && echo ' ✓ passed\n'",
+    "lint:vim:plugin": "./bin/dko-header \"  ${npm_lifecycle_event}  \"    && vint -- vim/plugin && echo ' ✓ passed\n'",
+    "lint:yaml": "./bin/dko-header \"  ${npm_lifecycle_event}  \"          && yamllint -- . && echo ' ✓ passed\n'",
     "pretest": "npm run --silent lint",
     "test": "./bootstrap/symlink",
     "posttest": "echo DONE"
