echint global, neoinclude coc ext, inc suggest timeout

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -16,6 +16,7 @@
   "suggest.echodocSupport": true,
   "suggest.minTriggerInputLength": 2,
   "suggest.snippetIndicator": " ⭐︎",
+  "suggest.timeout": 5000,
 
   // =========================================================================
   // Language Servers
