disable coc-eslint for now

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -35,7 +35,9 @@
   // coc-eslint
   // =========================================================================
 
-  "eslint.enable": true,
+  "eslint.enable": false,
+  "eslint.autoFix": false,
+  "eslint.autoFixOnSave": false,
   "eslint.run": "onType",
   "eslint.packageManager": "npm",
 
