disable dkoprettier for markdown for now

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -23,12 +23,10 @@
   // =========================================================================
 
   "languageserver": {
-
     "lua": {
       "command": "lua-lsp",
-      "filetypes": ["lua"]
-    }
-
+      "filetypes": ["lua"],
+    },
   },
 
   // =========================================================================
