--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, safety
+envlist = py37
 skipsdist = True
 
 [flake8]
@@ -13,17 +13,13 @@ ignore =
     D400
 
 [testenv]
-passenv = CI
-commands = flake8 bitbar/mine/*.py
+passenv =
+    CI
+    TERM
+whitelist_externals =
+    npm
+    npx
+    shellcheck
+commands = npm test --silent
 deps =
-    flake8
-    flake8-commas
-    flake8-docstrings
-    flake8-import-order
-    flake8-quotes
-
-[testenv:safety]
-passenv = CI
-commands = safety check -r requirements.txt
-deps =
-    safety
+    -rrequirements.txt
