--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,13 @@ language: python
 os:
   - linux
 python:
-  - '2.7'
+  - '3.7'
 before_install:
   - nvm install --lts
+install:
+  - pip install tox
 script:
   - tox
-  - npm test --silent
 deploy:
   skip_cleanup: true
   provider: script
