--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 bashate==0.6.0
+flake8==3.7.7
+flake8-commas==2.0.0
+flake8-docstrings==1.3.0
+flake8-import-order==0.18.1
+flake8-quotes==1.0.0
 pycodestyle==2.5.0
-safety==1.8.5
-tox==3.8.6
 vim-vint==0.4a1
 yamllint==1.15.0
