--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,14 @@
 branches:
   except:
     - master
-sudo: false
+language: python
+sudo: required
+dist: xenial
+python: "3.7"
 addons:
   apt:
     packages:
       - shellcheck
-language: python
-os:
-  - linux
-python:
-  - '3.7'
 before_install:
   - nvm install --lts
 install:
