fix passenv oneline

--- a/tox.ini
+++ b/tox.ini
@@ -13,13 +13,11 @@ ignore =
     D400
 
 [testenv]
-passenv =
-    CI
-    TERM
+passenv = CI TERM
 whitelist_externals =
     npm
     npx
     shellcheck
 commands = npm test --silent
 deps =
-    -rrequirements.txt
+    --requirement=requirements.txt
