--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ ignore =
     D400
 
 [testenv]
-passenv = CI TERM
+passenv = CI CI_NAME TERM TRAVIS TRAVIS_BRANCH TRAVIS_JOB_ID TRAVIS_PULL_REQUEST
 whitelist_externals =
     npm
     npx
